--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://username:<your-password>vixplayer.98gfbiv.mongodb.net
 PORT=8000
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=<your-token>
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=<your-token>
+REFRESH_TOKEN_EXPIRY=10d
